<resources>
    <string name="app_name">Journal App</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Sign Out</string>
    <string name="action_profile">My Profile</string>
    <string name="action_about">About App</string>
    <string name="give_it_a_title">Give it a Title</string>
    <string name="what_s_on_your_mind">What\'s on your mind?</string>
    <string name="add_journal">Add Journal</string>
    <string name="edit_journal">Edit Journal</string>
    <string name="edit">Edit</string>
    <string name="privacy_terms_and_conditions"><u>privacy terms and conditions</u></string>
    <string name="license_link">https://developerbryte.wordpress.com/license/</string>
</resources>
