<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".views.AddNewActivity">

    <EditText
        android:id="@+id/edtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textCapWords"
        android:hint="@string/give_it_a_title"
        android:layout_margin="15dp"
        android:textColor="@color/colorAccent"
        android:background="@drawable/edit_outline"
        android:padding="8dp" />
    <EditText
        android:id="@+id/edtText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:lines="3"
        android:background="@drawable/edit_outline"
        android:padding="8dp"
        android:textColor="@color/colorAccent"
        android:hint="@string/what_s_on_your_mind"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:inputType="textMultiLine|textCapSentences" />



    <Spinner
        android:id="@+id/spinnerCategory"
        android:layout_width="match_parent"
        android:layout_margin="15dp"
        android:background="@drawable/edit_outline"
        android:padding="8dp"
        android:textColor="@color/colorAccent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="@color/colorPrimary"
        android:background="@drawable/button_outline"
        android:text="@string/add_journal" />
</LinearLayout>